# Raytracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.odt  cmake_install.cmake  doxyfile
comptes-rendus-internes/: CRI-2014-01.odt  CRI-2014-02.odt
etc/: SimpleVertexShader.vertexshader  brick_colormap512.tga  chesterfield_colormap512.tga  diffuseShader.frag  diffuseShader.vert  shader.frag  shader.vert  simpleTexture.frag  simpleTexture.vert  uniformColor.frag  uniformColor.vert  uniformColor2.frag  uniformColor2.vert
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/camera/include/: Camera.hpp  PinholeCamera.hpp
src/camera/src/: Camera.cpp  PinholeCamera.cpp
src/camera/tests/: test_camera_PinholeCamera.cpp
src/demos/: demo_AABB_boxing.cpp  demo_buddha.cpp  demo_db_lights.cpp  demo_depht_blur.cpp  demo_diffuse.cpp  demo_golden_suzanne.cpp  demo_main.cpp  demo_reflection.cpp  demo_transparency.cpp
src/engine/include/: #RaytracingEngine.hpp#  RasterisationEngine.hpp  RaytracingEngine.hpp
src/engine/src/: RasterisationEngine.cpp  RaytracingEngine.cpp
src/engine/tests/: #test_engine_depthBlur.cpp#  test_engine_Mesh.cpp  test_engine_RaytracingEngine.cpp  test_engine_depthBlur.cpp
src/geometry/include/: SFMLConversions.hpp
src/glutils/include/: Buffers.hpp  Program.hpp  Vao.hpp  utilsTexture2D.hpp  utils_glm.hpp
src/glutils/src/: Buffers.cpp  Program.cpp  Vao.cpp  utilsTexture2D.cpp
src/gui/include/: ImageContent.hpp  LibraryDefine.hpp  Observable.hpp  Observer.hpp  RasterisationContent.hpp  RaytracingContent.hpp  TriangleContent.hpp  WindowContent.hpp  WindowController.hpp  WindowEvent.hpp  WindowModel.hpp  WindowView.hpp  gui.hpp  loadShader.hpp
src/gui/src/: ImageContent.cpp  RasterisationContent.cpp  RaytracingContent.cpp  TriangleContent.cpp  WindowContent.cpp  WindowController.cpp  WindowEvent.cpp  WindowModel.cpp  WindowView.cpp  gui.cpp  loadShader.cpp
src/gui/tests/: test_gui.cpp  test_gui_Mesh.cpp  test_gui_ObserverPattern.cpp  test_gui_RasterisationContent.cpp  test_gui_RaytracingContent.cpp  test_gui_WindowContent.cpp  test_gui_WindowModel.cpp  test_gui_WindowView.cpp  test_gui_sfml.cpp
src/light/include/: LightPoint.hpp
src/light/src/: LightPoint.cpp
src/light/tests/: test_light_LightPoint.cpp
src/main/: .main.cpp.swp  main.cpp
src/materials/include/: #MaterialProperties.hpp#  Material.hpp  MaterialProperties.hpp
src/materials/src/: Material.cpp  MaterialProperties.cpp
src/materials/tests/: test_materials_MaterialsProperties.cpp
src/math/include/: Quadratic.hpp  Quadric.hpp
src/math/src/: Quadratic.cpp  Quadric.cpp
src/math/tests/: test_math_quadratic.cpp
src/ray/include/: #Ray.hpp#  .#Ray.hpp  CameraRay.hpp  Ray.hpp  ReflexionRay.hpp  ReflexionRay.hpp~  ShadowRay.hpp  TransmissionRay.hpp
src/ray/src/: CameraRay.cpp  Ray.cpp  ReflexionRay.cpp  ReflexionRay.cpp~  ShadowRay.cpp  TransmissionRay.cpp
src/ray/tests/: test_ray_Ray.cpp
src/scene/include/: BoundingBox.hpp  BoundingShape.hpp  Face.hpp  Intersection.hpp  Mesh.hpp  Object.hpp  Scene.hpp  Shape.hpp  Sphere.hpp  Vertex.hpp  scene.hpp
src/scene/src/: BoundingBox.cpp  BoundingShape.cpp  Face.cpp  Intersection.cpp  Mesh.cpp  Object.cpp  Scene.cpp  Shape.cpp  Sphere.cpp  Vertex.cpp  scene.cpp
src/scene/tests/: test_scene.cpp  test_scene_BoundingBox.cpp  test_scene_Face.cpp  test_scene_Mesh.cpp  test_scene_Vertex.cpp  test_sphere_intersection.cpp
src/utils/include/: Buffers.hpp  FileLoader.hpp  OpenglObject.hpp  Program.hpp  StringSplitter.hpp  Vao.hpp  utilsTexture2D.hpp  utils_glm.hpp
src/utils/src/: Buffers.cpp  FileLoader.cpp  OpenglObject.cpp  Program.cpp  StringSplitter.cpp  Vao.cpp  utilsTexture2D.cpp
src/utils/tests/: test_utils_StringSplitter.cpp
